--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,62 +9,70 @@
     <fragment
         android:id="@+id/loginFragment2"
         android:name="udacity.fwd.project1solution.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        android:label="@string/login_fragment_title"
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment2_to_welcomeFragment"
-            app:destination="@id/welcomeFragment" />
+            app:destination="@id/welcomeFragment"
+            app:popUpTo="@id/loginFragment2"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="udacity.fwd.project1solution.WelcomeFragment"
-        android:label="WelcomeFragment" >
+        android:label="@string/welcome_fragment_title">
         <action
             android:id="@+id/action_welcomeFragment_to_instructionsFragment"
-            app:destination="@id/instructionsFragment" />
+            app:destination="@id/instructionsFragment"
+            app:popUpTo="@id/welcomeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/instructionsFragment"
         android:name="udacity.fwd.project1solution.InstructionsFragment"
-        android:label="InstructionsFragment" >
+        android:label="@string/instructions_fragment_title">
         <action
             android:id="@+id/action_instructionsFragment_to_shoeListFragment"
-            app:destination="@id/shoeListFragment" />
+            app:destination="@id/shoeListFragment"
+            app:popUpTo="@id/instructionsFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/shoeListFragment"
         android:name="udacity.fwd.project1solution.ShoeListFragment"
-        android:label="ShoeListFragment" >
+        android:label="@string/shoe_list_fragment_title">
         <action
             android:id="@+id/action_shoeListFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
         <argument
             android:name="sName"
+            android:defaultValue="null"
             app:argType="string"
-            app:nullable="true"
-            android:defaultValue="null" />
+            app:nullable="true" />
         <argument
             android:name="sCompany"
+            android:defaultValue="null"
             app:argType="string"
-            app:nullable="true"
-            android:defaultValue="null" />
+            app:nullable="true" />
         <argument
             android:name="sSize"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
         <argument
             android:name="sDesc"
+            android:defaultValue="sss"
             app:argType="string"
-            app:nullable="true"
-            android:defaultValue="sss" />
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
         android:name="udacity.fwd.project1solution.DetailsFragment"
-        android:label="fragment_details"
-        tools:layout="@layout/fragment_details" >
+        android:label="@string/details_fragment_title"
+        tools:layout="@layout/fragment_details">
         <action
             android:id="@+id/action_detailsFragment_to_shoeListFragment"
-            app:destination="@id/shoeListFragment" />
+            app:destination="@id/shoeListFragment"
+            app:popUpTo="@id/shoeListFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
