--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="@string/email"
+            android:text="@string/email_label"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
             app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
             style="@style/font_style" />
@@ -72,7 +72,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
-            android:hint="@string/password"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/login_btn"
@@ -89,7 +89,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
-            android:hint="@string/email"
+            android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
