--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,7 +75,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
-            android:hint="@string/password"
+            android:hint="@string/password_hint"
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:minHeight="48dp"
@@ -94,7 +94,7 @@
             android:layout_marginBottom="@dimen/margin"
             android:autofillHints="emailAddress"
             android:ems="10"
-            android:hint="@string/email"
+            android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
