--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -63,6 +63,11 @@
             android:defaultValue="sss"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_graph_shoeListFragment_to_graph_loginFragment"
+            app:destination="@id/graph_loginFragment"
+            app:popUpTo="@id/graph_shoeListFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/graph_detailsFragment"
