--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,12 +6,14 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/logo_gray</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <!--        <item name="colorSecondary">@color/teal_200</item>-->
+        <item name="colorSecondary">@color/logo_brown</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <!--        <item name="colorOnSecondary">@color/black</item>-->
+        <item name="colorOnSecondary">@color/logo_gray</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="fontFamily">casual </item>
+        <item name="fontFamily">casual</item>
     </style>
 </resources>
