--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,6 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:gravity="center_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/company_textView"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,8 +27,9 @@
             android:id="@+id/company_textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center_horizontal"
             app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
             app:layout_constraintEnd_toStartOf="@+id/size_textView"
             app:layout_constraintHorizontal_bias="0.5"
@@ -39,6 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:gravity="center_horizontal"
             app:layout_constraintBaseline_toBaselineOf="@+id/company_textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
