--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -6,6 +6,7 @@
     <data>
 
     </data>
+    <!--constraintlayout because the fragment has many view and constraintlayout will flatten them without nesting-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginFragmentLayout"
@@ -16,25 +17,25 @@
 
         <TextView
             android:id="@+id/email_tv"
+            style="@style/font_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@string/email_label"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
-            style="@style/font_style" />
+            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />
 
 
         <TextView
             android:id="@+id/passwd_tv"
+            style="@style/font_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@string/password_label"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-            style="@style/font_style" />
+            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />
 
         <Button
             android:id="@+id/login_btn"
@@ -73,14 +74,14 @@
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:hint="@string/password_hint"
+            android:importantForAutofill="no"
             android:inputType="textPassword"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/login_btn"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
@@ -88,6 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:autofillHints="emailAddress"
             android:ems="10"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
@@ -97,8 +99,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread"
-            android:autofillHints="emailAddress" />
+            app:layout_constraintVertical_chainStyle="spread" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
