--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <data>
 
     </data>
-
+    <!--Linear layout because the activity have one fragment that fills all activity space-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
