--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -12,7 +12,10 @@
             type="udacity.fwd.project1solution.models.Shoe" />
 
     </data>
-
+    <!--
+    constraintlayout because the fragment has many view and constraintlayout will flatten
+    them without nesting
+    -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/details_layout"
         android:layout_width="match_parent"
@@ -125,14 +128,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent">
 
-            <Button
-                android:id="@+id/cancelBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginEnd="8dp"
-                android:text="@string/cancel_btn" />
-
 
             <Button
                 android:id="@+id/saveBtn"
@@ -140,7 +135,17 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/save_btn" />
+
+            <Button
+                android:id="@+id/cancelBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/cancel_btn" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
