--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,7 @@
     <data>
 
     </data>
+    <!--constraintlayout because the fragment has many view and constraintlayout will flatten them without nesting-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginFragmentLayout"
@@ -16,25 +17,25 @@
 
         <TextView
             android:id="@+id/email_tv"
+            style="@style/font_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@string/email_label"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
-            style="@style/font_style" />
+            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />
 
         <TextView
             android:id="@+id/passwd_tv"
+            style="@style/font_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@string/password_label"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-            style="@style/font_style" />
+            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />
 
 
         <Button
