--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -7,6 +7,11 @@
 
     </data>
 
+    <!--
+    constraintlayout because the fragment has many view and constraintlayout will flatten them
+    without nesting
+     -->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/welcomeLayout"
         android:layout_width="match_parent"
@@ -40,16 +45,15 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/proceed_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
             android:gravity="center"
             android:text="@string/welcome_to_our_shoe_store"
             android:textColor="@color/black"
             android:textSize="20sp"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/proceed_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
             android:id="@+id/proceed_btn"
