--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,51 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!--Linear layout becuase the fragment has 3 views aligned horizontally.-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/name_textView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
-            app:layout_constraintEnd_toStartOf="@+id/company_textView"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="TextView" />
+            android:textStyle="bold"
+            tools:text="@string/shoe_name_lbl" />
 
         <TextView
             android:id="@+id/company_textView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
-            app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
-            app:layout_constraintEnd_toStartOf="@+id/size_textView"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/name_textView"
-            tools:text="TextView" />
+            android:textStyle="bold"
+            tools:text="@string/shoe_company_lbl" />
 
         <TextView
             android:id="@+id/size_textView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
-            app:layout_constraintBaseline_toBaselineOf="@+id/company_textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/company_textView"
-            tools:text="TextView" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textStyle="bold"
+            tools:text="@string/shoe_size_lbl" />
+
+    </LinearLayout>
+
 </layout>
