--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/menu_logout"
         android:icon="@drawable/ic_baseline_exit_to_app_24"
-        android:title="Logout" />
+        android:title="@string/logout" />
 </menu>
